src/objects/Product__c.object
<CustomObject>
    <description>This object is used to store information about the product</description>
    <fields>
        <fullName>ATM_Fee_In_Other_Currencies__c</fullName>
        <description>Fee in percent for ATM money withdrawal for other currencies</description>
        <label>ATM Fee In Other Currencies</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Card_Replacement_Cost__c</fullName>
        <description>The cost for card replacement</description>
        <label>Card Replacement Cost</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Calendar_Month__c</fullName>
        <description>Cost per Calendar Month</description>
        <label>Cost Per Calendar Month</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Defines the country for which prices are applied</description>
        <label>Country</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <label>Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>